--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-ops ~= 2.17
-python-on-whales >= 0.71
-# with the latest one (0.76) a rust compiler is needed because of pydantic-core, currently 2.33.2
-#python-on-whales == 0.71
-#pydantic == 2.7.4
-#maturin == 1.6.0
+ops >= 3, < 4
+python-on-whales == 0.79
+# Freezing maturin, pydantic and pydantic_core due to previous issues with
+# rust versions, and they take a long time to build
+maturin == 1.10.2
+pydantic_core == 2.41.5
+pydantic == 2.12.5
